--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -28,7 +28,7 @@ jobs:
           cache: maven
 
       - name: build_with_maven
-        run: mvn clean package -B -T 4
+        run: ./mvnw clean package -B -T 4
 
       - name: login_to_docker
         uses: docker/login-action@v3
@@ -42,4 +42,6 @@ jobs:
         with:
           push: true
           context: .
-          tags: ghcr.io/phitiet/portfolio:latest
+          tags: |
+            ghcr.io/phitiet/portfolio:latest
+            ghcr.io/phitiet/portfolio:${{ github.sha }}
