--- a/src/main/resources/config/career-nl.yml
+++ b/src/main/resources/config/career-nl.yml
@@ -15,7 +15,7 @@ career-nl:
       institution: Tabor College Werenfridus
       acquisitionDate: 02-07-2018
 
-    - title: BSc Computer Science (7,7 GPA)
+    - title: BSc Computer Science (7,7 NL / 3.3 US GPA)
       institution: Vrije Universiteit Amsterdam
       acquisitionDate: 01-08-2021
 
