feat(config): add thesis URL to BSc Computer Science certificate

--- a/src/main/resources/config/career-nl.yml
+++ b/src/main/resources/config/career-nl.yml
@@ -18,6 +18,7 @@ career-nl:
     - title: BSc Computer Science (7,7 NL / 3.3 US GPA)
       institution: Vrije Universiteit Amsterdam
       acquisitionDate: 01-08-2021
+      thesisUrl: https://www.cs.vu.nl/~wanf/theses/bijl-tiet-bscthesis.pdf
 
     - title: Train De Trainer
       institution: ICM
