--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
             paths: /**
   jackson:
     default-property-inclusion: non_null
+
+portfolio:
+  discord:
+    webhook-url: ${DISCORD_WEBHOOK_URL:}
